# Shirokumakun-Matter

./: .clang-format  CMakeLists.txt  Dockerfile  Kconfig  LICENSE  Makefile  README.md  pm_static_xiao_ble_nrf52840_sense.yml  prj.conf  sysbuild.conf  west.yml
.devcontainer/: devcontainer.json
boards/: xiao_ble_nrf52840.overlay  xiao_ble_nrf52840_sense.overlay
scripts/: jlink_flash.jlink  jlink_go.jlink  python_path_shim.py
src/: ac_controller.matter  ac_controller.zap  app_task.cpp  app_task.h  chip_project_config.h  hw_pairing.cpp  hw_pairing.h  identify_led.cpp  identify_led.h  ir_driver.cpp  ir_driver.h  ir_protocol.cpp  ir_protocol.h  main.cpp  pdm_manager.cpp  pdm_manager.h  qrcodegen.c  scd40_manager.cpp  scd40_manager.h  shell_commands.cpp  zcl_callbacks.cpp
src/zap-generated/: CodeDrivenCallback.h  CodeDrivenInitShutdown.cpp  IMClusterCommandHandler.cpp  PluginApplicationCallbacks.h  access.h  callback-stub.cpp  endpoint_config.h  gen_config.h
src/zap-generated/app/: PluginApplicationCallbacks.h  callback-stub.cpp  cluster-callbacks.cpp
src/zap-generated/app/static-cluster-config/: AccessControl.h  AdministratorCommissioning.h  AirQuality.h  BasicInformation.h  Binding.h  CarbonDioxideConcentrationMeasurement.h  Descriptor.h  DiagnosticLogs.h  FanControl.h  GeneralCommissioning.h  GeneralDiagnostics.h  GroupKeyManagement.h  Groups.h  Identify.h  NetworkCommissioning.h  OperationalCredentials.h  RelativeHumidityMeasurement.h  SoftwareDiagnostics.h  Thermostat.h  (+1 more)
sysbuild/mcuboot/: prj.conf
sysbuild/mcuboot/boards/: xiao_ble_nrf52840_sense.overlay
